--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">SmartCar</string>
     <string name="connect_to_car">Connect to car</string>
+    <string name="smartcar_app">SmartCar App</string>
+    <string name="select">Select</string>
+    <string name="help">Help</string>
+    <string name="choose_car">Choose a Car to connect to:</string>
 
 </resources>
