Implemented BT communication Car should receive byte commands via BT Updated xml to show 'Automatic' when toggled on.
Co-authored-by: Hjalmar Thunberg <hjalmar.thunberg@gmail.com>

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="toggle_bluetooth">Toggle Bluetooth</string>
 
     <string name="manual">Manual</string>
+    <string name="automatic">Automatic</string>
     <string name="stop">STOP</string>
     <string name="forward">Forward</string>
     <string name="backward">Backward</string>
