--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SmartCar</string>
-    <string name="drive_car">Control car</string>
+    <string name="drive_car">Connect to Car</string>
     <string name="smartcar_app">SmartCar App</string>
     <string name="exit">Exit</string>
     <string name="help">Help</string>
