--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="bluetooth_not_supported">Bluetooth is not supported on this device.</string>
     <string name="toggle_bluetooth">Toggle Bluetooth</string>
     <string name="logo">logo </string>
+    <string name="description">An automatic and manually driven Arduino car.</string>
 
     <string name="manual">Manual</string>
     <string name="automatic">Automatic</string>
